<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.createOrder.createOrderFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="@dimen/_190sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/light_grey"
            android:imeOptions="actionSearch"
            android:textAlignment="center"
            android:theme="@style/AppSearchView"
            app:iconifiedByDefault="false"
            app:queryBackground="@color/light_grey"
            app:queryHint="Search Products" />

        <ImageView
            android:id="@+id/barcode"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="1dp"
            android:layout_toEndOf="@+id/searchView"
            android:src="@drawable/barcode" />

        <ImageView
            android:id="@+id/cartBtn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/barcode"
            android:src="@drawable/cart" />

        <com.nex3z.notificationbadge.NotificationBadge
            android:id="@+id/badge"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignTop="@+id/cartBtn"
            android:layout_marginLeft="-13dp"
            android:layout_marginTop="-5dp"
            android:layout_toRightOf="@+id/cartBtn"
            app:nbMaxTextLength="2" />

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchView"
            android:background="@color/light_grey">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/rg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/smartPhonesTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radioselector"
                            android:button="@android:color/transparent"
                            android:checked="true"
                            android:paddingLeft="@dimen/_3sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_15sdp"
                            android:text="@string/smart_phones"
                            android:textAlignment="center"
                            android:textColor="@drawable/radiotext" />

                        <RadioButton
                            android:id="@+id/TvTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radioselector"
                            android:button="@android:color/transparent"
                            android:paddingLeft="@dimen/_3sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_15sdp"
                            android:text="@string/tvs"
                            android:textAlignment="center"
                            android:textColor="@drawable/radiotext" />

                        <RadioButton
                            android:id="@+id/laptopTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radioselector"
                            android:button="@android:color/transparent"
                            android:paddingLeft="@dimen/_3sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_15sdp"
                            android:text="@string/laptops_amp_tablets"
                            android:textAlignment="center"
                            android:textColor="@drawable/radiotext" />

                        <RadioButton
                            android:id="@+id/Accessoriestv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radioselector"
                            android:button="@android:color/transparent"
                            android:paddingLeft="@dimen/_3sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_15sdp"
                            android:text="@string/phone_accessories"
                            android:textAlignment="center"
                            android:textColor="@drawable/radiotext" />

                        <RadioButton
                            android:id="@+id/audioTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radioselector"
                            android:button="@android:color/transparent"
                            android:paddingLeft="@dimen/_3sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_15sdp"
                            android:text="@string/audio"
                            android:textAlignment="center"
                            android:textColor="@drawable/radiotext" />

                        <RadioButton
                            android:id="@+id/powerBankTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radioselector"
                            android:button="@android:color/transparent"
                            android:paddingLeft="@dimen/_3sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_15sdp"
                            android:text="@string/power_banks"
                            android:textAlignment="center"
                            android:textColor="@drawable/radiotext" />

                        <RadioButton
                            android:id="@+id/groomingTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radioselector"
                            android:button="@android:color/transparent"
                            android:paddingLeft="@dimen/_3sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_15sdp"
                            android:text="@string/grooming"
                            android:textAlignment="center"
                            android:textColor="@drawable/radiotext" />

                        <RadioButton
                            android:id="@+id/wearablesTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radioselector"
                            android:button="@android:color/transparent"
                            android:paddingLeft="@dimen/_3sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_15sdp"
                            android:text="@string/smart_wearables"
                            android:textAlignment="center"
                            android:textColor="@drawable/radiotext" />

                        <RadioButton
                            android:id="@+id/travelTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radioselector"
                            android:button="@android:color/transparent"
                            android:paddingLeft="@dimen/_3sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_15sdp"
                            android:text="@string/backpack_amp_travel"
                            android:textAlignment="center"
                            android:textColor="@drawable/radiotext" />

                        <RadioButton
                            android:id="@+id/homeTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radioselector"
                            android:button="@android:color/transparent"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_15sdp"
                            android:text="@string/smart_home"
                            android:textAlignment="center"
                            android:textColor="@drawable/radiotext" />

                        <RadioButton
                            android:id="@+id/lifestyleTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radioselector"
                            android:button="@android:color/transparent"
                            android:paddingLeft="@dimen/_3sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_15sdp"
                            android:text="@string/lifestyle"
                            android:textAlignment="center"
                            android:textColor="@drawable/radiotext" />

                        <RadioButton
                            android:id="@+id/budgetBundlesTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radioselector"
                            android:button="@android:color/transparent"
                            android:paddingLeft="@dimen/_3sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_15sdp"
                            android:text="@string/budget_bundles"
                            android:textAlignment="center"
                            android:textColor="@drawable/radiotext" />

                    </RadioGroup>

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl2"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/searchView"
            android:layout_toEndOf="@+id/rl1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            </ScrollView>

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>